Fixed icon visibility in icon as button element on Firefox

--- a/src/sass/_buttons.scss
+++ b/src/sass/_buttons.scss
@@ -305,6 +305,8 @@ $buttonRoundLabelColor: $black;
   height: 40px;
   font-size: 0;
   line-height: 0;
+  overflow: visible;
+  text-align: center;
 
   &:before {
     color: $iconAsButtonColor;
